<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cenxui.mydemo.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView" />

    <Button
        android:text="@string/nextOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonLast"
        android:layout_toEndOf="@+id/buttonLast"
        android:layout_marginStart="64dp"
        android:id="@+id/buttonNext" />

    <Button
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLast"
        android:layout_toStartOf="@+id/buttonNext"
        android:layout_marginTop="75dp"
        android:id="@+id/buttonAdd" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_below="@+id/editName"
        android:layout_alignStart="@+id/editName"
        android:id="@+id/editBirthday"
        android:hint="@string/birthday" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/editCost"
        android:layout_alignStart="@+id/editCost"
        android:id="@+id/editCount"
        android:hint="@string/count" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editCost"
        android:hint="@string/cost"
        android:layout_below="@+id/editBirthday"
        android:layout_alignStart="@+id/editBirthday" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/editCount"
        android:layout_alignStart="@+id/editCount"
        android:id="@+id/editHeight"
        android:hint="@string/height" />

    <Button
        android:text="@string/lastOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLast"
        tools:text="@string/lastOne"
        android:layout_marginStart="39dp"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editWeight"
        android:hint="@string/weight"
        android:layout_below="@+id/editHeight"
        android:layout_alignStart="@+id/editHeight" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editName"
        android:hint="@string/name"
        android:layout_marginStart="40dp"
        android:layout_below="@+id/editId"
        android:layout_toEndOf="@+id/buttonAdd" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/editId"
        android:hint="@string/id"
        android:layout_below="@+id/buttonNext"
        android:layout_alignStart="@+id/editName" />
</RelativeLayout>
